@@ -43,3 +43,6 @@ Change pmin/pmax for 0-length args, as in 2.15.1.
 
 Change "exit" to "_Exit" in parallel package, similarly to
 what is done in 3.1.1-patched.
+
+Put in the mod from 2.15.3 to get plots to work with newer
+versions of cairo.
