@@ -243,6 +243,7 @@ static void Cairo_update(pX11Desc xd)
 {
     if(inclose || !xd || !xd->buffered || xd->holdlevel > 0) return;
     cairo_paint(xd->xcc);
+    cairo_surface_flush(xd->xcs);
     if (xd->type == WINDOW) XDefineCursor(display, xd->window, arrow_cursor);
     XSync(display, 0);
     xd->last = currentTime();
@@ -746,8 +747,10 @@ static void handleEvent(XEvent event)
 #ifdef HAVE_WORKING_CAIRO
 	    pX11Desc xd = (pX11Desc) dd->deviceSpecific;
 	    /* We can use the buffered copy where we have it */ 
-	    if(xd->buffered == 1) cairo_paint(xd->xcc);
-	    else if (xd->buffered > 1)
+            if(xd->buffered == 1) {
+		cairo_paint(xd->xcc);
+		cairo_surface_flush(xd->xcs);
+	    } else if (xd->buffered > 1)
 		/* rely on timer to repaint eventually */
 		xd->last_activity = currentTime();
 	    else
@@ -2673,7 +2676,10 @@ static void X11_Mode(int mode, pDevDesc dd)
 		Cairo_update(xd);
 	    return;
 	}
-	if(xd->buffered) cairo_paint(xd->xcc);
+	if(xd->buffered) {
+	    cairo_paint(xd->xcc);
+            cairo_surface_flush(xd->xcs);
+	}
 #endif
 	if(xd->type==WINDOW) XDefineCursor(display, xd->window, arrow_cursor);
 	XSync(display, 0);
